[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/pause_menu/pause_layer.tscn" type="PackedScene" id=1]
[ext_resource path="res://menu/main/main.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="level" type="Node2D" parent="."]

[node name="pause_layer" parent="." instance=ExtResource( 1 )]

[node name="load_layer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="load_layer"]
visible = false
margin_right = 480.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="load_layer"]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="black_layer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="black_layer"]
visible = false
margin_right = 480.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scrn_timer" type="Timer" parent="."]

[node name="save_timer" type="Timer" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]
